--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Productivity Dashboard</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
 </head>
 <body>
   <h1>My Tasks</h1>
 
   <input id="taskInput" placeholder="Task title" />
+  <input type="date" id="dueDate" />
   <select id="priority">
     <option value="LOW">Low</option>
     <option value="MEDIUM">Medium</option>
